Change JVM options. remove MaxPermSize and add +UseStringDeduplication